message updates and visibility/opacity

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
   color: hsl(206, 17%, 28%);
 }
 
-.card {
+.card-start {
   background-color: hsl(0, 0%, 100%);
   border-radius: 5px;
   border-width: 1px;
@@ -40,6 +40,21 @@ header {
   margin: 0 auto;
   max-width: 800px;
   padding: 30px 40px;
+  opacity: 20%;
+}
+
+/* in java set a control to toggle these from hidden to visible */
+
+.card {
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 5px;
+  border-width: 1px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
+  color: hsl(206, 17%, 28%);
+  font-size: 18px;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 30px 40px;  
   visibility: visible;
 }
 
