changed opacity control to display control for cleaner appearance

--- a/style.css
+++ b/style.css
@@ -40,12 +40,11 @@ header {
   margin: 0 auto;
   max-width: 800px;
   padding: 30px 40px;
-  opacity: 20%;
+  display: block;
 }
 
 /* in java set a control to toggle these from 
-      (above) opacity 100% -> 20% && unclickable 
-      (below) visiility: hidden -> visible */
+      display block/none  */
 
 .card {
   background-color: hsl(0, 0%, 100%);
@@ -57,7 +56,7 @@ header {
   margin: 0 auto;
   max-width: 800px;
   padding: 30px 40px;  
-  visibility: visible;
+  display: none;
 }
 
 .card-header::after {
