--- a/style.css
+++ b/style.css
@@ -73,10 +73,43 @@ header {
 
 .length {
   width: 100%;
+  position: relative; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.length-title {
+  position: absolute;
+  top: -10px;
+  transform: translateY(-50%);
+	color: black;
+	pointer-events: none;
+	user-select: none;
+}
+
+.length-title::after {
+  content: attr(data-length);
+  position: absolute;
+  right: -16px;
+  color: black;
+}
+
+.length::before {
+  content: attr(data-min);
+  left: 10px;
+  position: absolute;
+}
+
+.length::after {
+  content: attr(data-max);
+  right: 1px;
+  position: absolute;
 }
 
 #slider {
-  width: 100%;
+  width: 90%;
+  margin: 0 10px;
 }
 
 .card-footer {
